ARROW-1998: [Python] fix crash on empty Numpy arrays

This would happen with some object types (binary, string).